--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,9 @@ services:
     restart: unless-stopped
     depends_on:
       - monerod
+    ports:
+      - 127.0.0.1:8081:8081
+      - 127.0.0.1:8080:8080
     command:
       --scan-threads 4 --rest-threads 4 --rest-server http://0.0.0.0:8080 --admin-rest-server http://0.0.0.0:8081 --log-level 1 --daemon=tcp://monerod:18082 --sub=tcp://monerod:18083 --confirm-external-bind
     <<: *log-config
