flesh out quart app skeleton

--- a/lws-web/Makefile
+++ b/lws-web/Makefile
@@ -1,7 +1,10 @@
 setup:
 	python3 -m venv .venv
 	.venv/bin/pip install poetry
-	poetry install
+	.venv/bin/poetry install
 
 run:
-	poetry run start
+	.venv/bin/poetry run start
+
+clean:
+	rm -rf .venv poetry.lock
