--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,20 +6,26 @@ x-log-config: &log-config
       max-size: "50m"
       max-file: "5"
 services:
-  lws-web:
-      container_name: lws-web
-      build:
-        context: lws-web
-        dockerfile: Dockerfile
-      restart: unless-stopped
-      depends_on:
-        - monero-lws
-      environment:
-          NUXT_LWS_API_KEY: ayoo
-          NUXT_LWS_ADMIN_URL: http://127.0.0.1:8080
-      ports:
-        - 127.0.0.1:5000:5000
-      <<: *log-config
+  # lws-web:
+  #     container_name: lws-web
+  #     build:
+  #       context: lws-web
+  #       dockerfile: Dockerfile
+  #     restart: unless-stopped
+  #     depends_on:
+  #       - monero-lws
+  #     environment:
+  #         NUXT_LWS_API_KEY: ayoo
+  #         NUXT_LWS_ADMIN_URL: http://127.0.0.1:8080
+  #     ports:
+  #       - 127.0.0.1:5000:5000
+  #     <<: *log-config
+  redis:
+    image: redis:latest
+    container_name: monero-lws-cache
+    restart: always
+    ports:
+      - 127.0.0.1:6379:6379
   monero-lws:
     container_name: monero-lws
     build:
