--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ x-log-config: &log-config
     options:
       max-size: "50m"
       max-file: "5"
+volumes:
+  lws:
 services:
   # lws-web:
   #     container_name: lws-web
@@ -41,6 +43,8 @@ services:
     ports:
       - 127.0.0.1:8081:8081
       - 127.0.0.1:8080:8080
+    volumes:
+      - lws:/home/monero-lws/.bitmonero/light_wallet_server
     command:
       --scan-threads 4 --rest-threads 4 --rest-server http://0.0.0.0:8080 --admin-rest-server http://0.0.0.0:8081 --log-level 1 --daemon=tcp://monerod:18082 --sub=tcp://monerod:18083 --confirm-external-bind
     <<: *log-config
