split out routes

--- a/lws-web/pyproject.toml
+++ b/lws-web/pyproject.toml
@@ -24,4 +24,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "lws.app:run"
+start = "lws.app:app.run"
