--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ x-log-config: &log-config
       max-file: "5"
 volumes:
   lws:
+  lws-web:
 services:
   lws-web:
     container_name: lws-web
@@ -17,10 +18,16 @@ services:
     depends_on:
       - monero-lws
     environment:
-        LWS_URL: http://127.0.0.1:8080
-        LWS_ADMIN_URL: http://127.0.0.1:8081
+        LWS_URL: http://monero-lws:8080
+        LWS_ADMIN_URL: http://monero-lws:8081
+        QUART_ENV: production
+        HOST: 0.0.0.0
+        DEBUG: 0
     ports:
       - 127.0.0.1:5000:5000
+    volumes:
+      - lws-web:/srv/lws-web
+    user: "1000:1000"
     command:
       ./.venv/bin/poetry run start
     <<: *log-config
@@ -39,6 +46,9 @@ services:
     ports:
       - 127.0.0.1:8081:8081
       - 127.0.0.1:8080:8080
+    expose:
+      - 8080/tcp
+      - 8081/tcp
     volumes:
       - lws:/home/monero-lws/.bitmonero/light_wallet_server
     command:
