--- a/prod.compose.yaml
+++ b/prod.compose.yaml
@@ -24,7 +24,7 @@ services:
         DEBUG: 0
     network_mode: host
     volumes:
-      - lwsadmin:/srv/lwsadmin
+      - lwsadmin:/srv/lwsadmin/data
     user: "1000:1000"
     command:
       ./.venv/bin/poetry run start
