trying out htmx for more pieces

--- a/lwsadmin/pyproject.toml
+++ b/lwsadmin/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "lws.app:app.run"
+start = "lws:create_app().run()"
