--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,16 +8,40 @@ x-log-config: &log-config
 volumes:
   lws:
   mymonero:
+  lwsadmin:
 services:
+  lwsadmin:
+    container_name: lwsadmin
+    image: lalanza808/lwsadmin:latest
+    restart: unless-stopped
+    depends_on:
+      - monero-lws
+    environment:
+        LWS_URL: http://monero-lws:8080
+        LWS_ADMIN_URL: http://monero-lws:8081
+        QUART_ENV: production
+        HOST: 0.0.0.0
+        DEBUG: 0
+        SERVER_NAME: ${SERVER_NAME:-127.0.0.1:5000}
+        SECRET_KEY: ${SECRET_KEY:-thisisasecret}
+    volumes:
+      - lwsadmin:/srv/lwsadmin/data
+    user: "1000:1000"
+    command:
+      ./.venv/bin/poetry run start
+    ports:
+      - 127.0.0.1:5000:5000
+    <<: *log-config
   mymonero-web:
     container_name: mymonero-web
-    image: lalanza808/mymonero-web
+    image: lalanza808/mymonero-web-js:latest
+    restart: unless-stopped
     environment:
       MYMONERO_WEB_NETTYPE: 0
-      MYMONERO_WEB_SERVER_URL: http://localhost:8080
+      MYMONERO_WEB_SERVER_URL: http://localhost:8080/
       MYMONERO_WEB_APP_NAME: LZAXMR
     ports:
-      - 127.0.0.1:8000:80
+      - 127.0.0.1:9110:80
     volumes:
       - mymonero:/app
     <<: *log-config
