--- a/lwsadmin/Dockerfile
+++ b/lwsadmin/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
-RUN apt-get update
+RUN apt-get update -y
 RUN apt-get install -y python3 python3-venv
 WORKDIR /srv/lwsadmin
 RUN adduser \
